:bug: overflow of map

--- a/styles/components/_map.scss
+++ b/styles/components/_map.scss
@@ -4,7 +4,7 @@
     text-align: center;
     font-family: "Monaz 3D Demo", serif;
     height: 100vh;
-    overflow: hidden;
+    //overflow: hidden;
 
     h1{
         font-size: 2em;
